# watchersattherim

./: .gitignore  CHANGELOG.md  README.md  install.sh  pyproject.toml  requirements.txt
docs/: PROPAGATION.md
docs/samples/: ft8mon_output.txt
examples/: collector.full.example.ini  collector.minimal.example.ini  monitor.full.example.ini  monitor.minimal.example.ini  watchersattherim-collector.service  watchersattherim-monitor.service
tests/: test_admin.py  test_cache.py  test_collector.py  test_collector_cli.py  test_config.py  test_driver.py  test_ft8_parser.py  test_ft8_pipeline.py  test_metrics.py  test_monitor.py  test_parser.py  test_propagation.py  test_propagation_cli.py  test_query.py  test_resolve_config.py  test_telemetry.py  test_wspr_parser.py  test_wspr_pipeline.py
tests/rns/: README.md  collector.ini  fake_ft8mon  monitor.ini.tmpl  reticulum-collector.config  reticulum-monitor.config  reticulum-query.config  run_pipeline.py
tools/: classify_sample.py
watchersattherim/: __init__.py
watchersattherim/collector/: __init__.py  admin.py  cli.py  commands.py  config.py  http.py  ingest.py  listener.py  queries.py  stats.py  storage.py
watchersattherim/common/: __init__.py  config.py  identity.py  lxmf.py  protocol.py  wire.py
watchersattherim/monitor/: __init__.py  cache.py  cli.py  config.py  driver.py  ft8_parser.py  ft8_pipeline.py  monitor.py  observations.py  parser.py  pipeline.py  sender.py  telemetry.py  transport.py  wspr_parser.py  wspr_pipeline.py
watchersattherim/propagation/: __init__.py  channel.py  cli.py  config.py  field.py  (+3 more)
(+12 files in other folders)
